--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -40,9 +40,9 @@
                             <li><a href="#" data-name="月报"> <i class="fa fa-inbox "></i> 月报 <span class="label label-warning pull-right">·</span> </a></li>
                             <li><a href="#" data-name="项目基本信息"> <i class="fa fa-envelope-o"></i> 项目概况</a></li>
                             <li><a href="#" data-name="项目前期信息"> <i class="fa fa-envelope-o"></i> 项目前期</a></li>
-                            <li><a href="#"> <i class="fa fa-certificate"></i> 合同备案</a></li>
-                            <li><a href="#"> <i class="fa fa-file-text-o"></i> 招标备案 <span class="label label-danger pull-right">·</span></a></li>
-                            <li><a href="#"> <i class="fa fa-trash-o"></i> 年度投融资计划 </a></li>
+                            <li><a href="#" data-name="合同备案信息"> <i class="fa fa-certificate"></i> 合同备案</a></li>
+                            <li><a href="#" data-name="招标项目备案"> <i class="fa fa-file-text-o"></i> 招标备案 <span class="label label-danger pull-right">·</span></a></li>
+                            <li><a href="#" data-name="年度投资计划"> <i class="fa fa-trash-o"></i> 年度投融资计划 </a></li>
                         </ul>
                         <h5>Categories</h5>
                         <ul class="category-list" style="padding: 0">
