--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -158,8 +158,18 @@
                 </shiro:hasAnyRoles>
                 <shiro:hasAnyRoles name="manager, admin">
                     <li>
-                        <a href="#" id="announcement_a"><i class="fa fa-magic"></i> <span class="nav-label">发布公告</span></a>
+                        <a href="#"><i class="fa fa-magic"></i> <span
+                                class="nav-label">公告 </span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse">
+                            <li>
+                                <a href="#" id="announcement_a"><i class="fa fa-magic"></i> <span class="nav-label">发布公告</span></a>
+                            </li>
+                            <li>
+                                <a href="#" id="announcement_management"><i class="fa fa-magic"></i> <span class="nav-label">公告管理</span></a>
+                            </li>
+                        </ul>
                     </li>
+
                     <li>
                         <a href="#"><i class="fa fa-star"></i> <span class="nav-label">账户开通 </span></a>
                     </li>
