--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -429,10 +429,7 @@
                                                                         <li class="success-element" id="task18">
                                                                             <span style="font-size: 15px;"> <i
                                                                                     class="fa fa-calendar"></i> 填报月份 ：</span>
-                                                                            <span style="font-size: 15px;"
-                                                                                  id="report_year"></span> - <span
-                                                                                style="font-size: 15px;"
-                                                                                id="report_month"></span>
+                                                                            <span style="font-size: 15px;" id="report_year"></span> - <span style="font-size: 15px;" id="report_month"></span>
                                                                         </li>
                                                                     </ul>
                                                                 </div>
