--- a/src/main/resources/templates/wechatauthlogin.html
+++ b/src/main/resources/templates/wechatauthlogin.html
@@ -28,7 +28,7 @@
         <div class="error-desc">
             将使用微信授权本系统并登陆，确定请点击登陆按钮。 <br/><a id="wechat_auth_login_btn" href="#" class="btn btn-primary m-t">登陆</a>
         </div>
-
+        <h3 id="msg" class="font-bold"></h3>
     </div>
 
     <!-- Mainly scripts -->
