--- a/src/main/resources/templates/base_info_show.html
+++ b/src/main/resources/templates/base_info_show.html
@@ -85,7 +85,7 @@
                                     <dl class="dl-horizontal">
                                         <dt>上报人:</dt> <dd id="owner"></dd>
                                         <dt>上报人电话:</dt> <dd> 18586878889 </dd>
-                                        <dt>审核人:</dt> <dd><a href="#" class="text-navy">老张</a> </dd>
+                                       <!-- <dt>审核人:</dt> <dd><a href="#" class="text-navy">老张</a> </dd>-->
                                     </dl>
                                 </div>
                                 <div class="col-lg-7" id="cluster_info">
