--- a/src/main/resources/templates/project_monthly_report.html
+++ b/src/main/resources/templates/project_monthly_report.html
@@ -400,7 +400,7 @@
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-lg-5">
-                                                <label>土石方洞挖</label><span style="color:red;"> *</span>
+                                                <label>土石方洞挖（万/m³）</label><span style="color:red;"> *</span>
                                                 <input id="hole_dug" name="hole_dug" type="text" class="form-control required number" maxlength="15">
                                             </div>
                                             <div class="col-lg-3">
