把所有控制器中隐患的公共变量去除

--- a/src/main/resources/templates/annual_investment_plan_new.html
+++ b/src/main/resources/templates/annual_investment_plan_new.html
@@ -2,7 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
-
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var annualInvestmentId = [[${annualInvestmentId}]];
+    /*]]>*/
+</script>
 
 <head>
     <meta charset="utf-8">
