--- a/src/main/resources/templates/announcement.html
+++ b/src/main/resources/templates/announcement.html
@@ -2,11 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
-<head>
-
 
 <head>
-
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        var announcementId = [[${announcementId}]];
+        /*]]>*/
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
