--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link th:href="@{/css/plugins/datapicker/datepicker3.css}" rel="stylesheet">
     <link th:href="@{/css/custom/bootstrap-switch.min.css}" rel="stylesheet">
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        var projectMonthlyReportId = [[${projectMonthlyReportId}]];
+        /*]]>*/
+    </script>
 </head>
 
 <body>
