--- a/src/main/resources/templates/tender_new.html
+++ b/src/main/resources/templates/tender_new.html
@@ -5,6 +5,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        var tenderId = [[${tenderId}]];
+        /*]]>*/
+    </script>
 </head>
 
 <body>
