--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -168,7 +168,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-star"></i> <span
+                        <a href="#"><i class="fa fa-sitemap"></i> <span
                                 class="nav-label">用户账户</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li>
@@ -178,6 +178,9 @@
                                 <a href="#" id="account_management"><i class="fa fa-magic"></i> <span class="nav-label">账户管理</span></a>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <a href="#" id="reservoir_dic"><i class="fa fa-star"></i> <span class="nav-label">水库字典</span><span class="fa arrow"></span></a>
                     </li>
                 </shiro:hasAnyRoles>
             </ul>
@@ -240,6 +243,10 @@
         <shiro:hasRole name="manager">
             <div id="content">
                 <div class="map-content">
+                    <div class="search-location">
+                        <input type="text" placeholder="请输入水库名">
+                        <i class="fa fa-search"></i>
+                    </div>
                     <div id="allmap"></div>
                 </div>
 
@@ -281,13 +288,13 @@
                         <!-- 第一个悬浮框 -->
                         <div class="tabs-container" id="container1">
                             <ul class="nav nav-tabs">
-                                <li class="col-lg-6 active">
+                                <li class="col-lg-6 col-md-6 active">
                                     <a data-toggle="tab" href="#tab-3" aria-expanded="true">
                                         <i class="fa fa-laptop"></i>
                                         <span class="control-tips">概述</span>
                                     </a>
                                 </li>
-                                <li class="col-lg-6">
+                                <li class="col-lg-6 col-md-6">
                                     <a data-toggle="tab" href="#tab-4" aria-expanded="false">
                                         <i class="fa fa-desktop"></i>
                                         <span class="control-tips">资金</span>
@@ -323,6 +330,9 @@
                                                 <label>水库概述：</label>
                                                 <span id="overview_t">50000000</span>
                                             </div>
+                                        </div>
+                                        <div class="all-details">
+                                            <a project-id="8a8082816458ab31016458ab463c0001">更多详情......</a>
                                         </div>
                                     </div>
                                 </div>
@@ -393,13 +403,13 @@
                         <!-- 第二个悬浮框 -->
                         <div class="tabs-container" id="container2">
                             <ul class="nav nav-tabs">
-                                <li class="col-lg-6 active">
+                                <li class="col-lg-6 col-md-6 active">
                                     <a data-toggle="tab" href="#tab-1" aria-expanded="true">
                                         <i class="fa fa-laptop"></i>
                                         <span class="control-tips">待办</span>
                                     </a>
                                 </li>
-                                <li class="col-lg-6">
+                                <li class="col-lg-6 col-md-6 ">
                                     <a data-toggle="tab" href="#tab-2" aria-expanded="false">
                                         <i class="fa fa-desktop"></i>
                                         <span class="control-tips">申请</span>
